# book-notes

./: .gitignore  9. Subqueries.sql  CMakeLists.txt  README.md  Untitled 1.docx  package-lock.json
English Grammar in Use. 4th edition. Raymond Murphy/: Cases.md  Present and past.md  Present perfect and past.md
How to Stop Worrying and Start Living/: How to Stop Worrying and Start Living.md
How to Win Friends and Influence People/: How to Win Friends and Influence People.md  Part 1. Fundamental Techniques In Handling People.md
Learning SQL. 2nd Edition/: 10. Joins Revisited.sql  12. Transactions.md  14. Views.sql  2. Creating and Populating a Database.sql  3. Query Primer.sql  6. Working with Sets.sql  8. Grouping and Aggregates.sql  9. Subqueries.sql
Learning SQL. 2nd Edition. Alan Beaulieu/: 11. Conditional Logic.sql  12. Transactions.sql  13. Indexes and Constraints.sql  15. Metadata.sql  4. Filtering.sql  5. Querying Multiple Tables.sql  7. Data Generation, Conversion, and Manipulation.sql  9. Subqueries.sql
Programming patterns/: Dependecy injection and dependency inversion.md  Dependency Inversion in React.md
React introduction/: React introduction.md
React introduction/Forms/: Forms.md
Test-driven development (TDD)/: The Three Laws of TDD.md
The Winners Laws/: The Winner Laws.md
WebGL Beginner's Guide/: 2. Rendering Geometry.md  typed_arrays.html  typed_arrays.js
the Art of Problem Solving, Volume 1: the Basics/: .~lock.1. EXPONENTS AND LOGARITHMS.docx#  1. EXPONENTS AND LOGARITHMS.docx  1. EXPONENTS AND LOGARITHMS.md  General notes.docx
(+76 files in other folders)
