cmake_minimum_required(VERSION 3.14)
project(book_notes)

set(CMAKE_CXX_STANDARD 14)

add_executable(book_notes
        "The C Programming Language. 2nd Edition/1. A Tutorial Introduction/a.out"
        "The C Programming Language. 2nd Edition/1. A Tutorial Introduction/1. A Tutorial Introduction.c")
